Make it more clear that author/email address need to be set.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -1,8 +1,8 @@
 {
 	"ProjectTitle": "A Neuroimaging Project",
-	"Authors/Contributors": "",
+	"Authors/Contributors": "SET AUTHOR",
 	"ProjectDirectory": "",
-	"EmailAddress": "",
+	"EmailAddress": "SET EMAIL ADDRESS",
 	"TempDirectory": "",
 	"SourceOptions": {
 		"SourceURL": "fw://",
