--- a/clpipe/batchConfigs/slurmUNCConfig.json
+++ b/clpipe/batchConfigs/slurmUNCConfig.json
@@ -24,5 +24,5 @@
   "OutputCommandActive": true,
 
 
-  "SingularityBindPaths": "/proj,/pine,/nas02,/nas"
+  "SingularityBindPaths": "/proj,/pine,/work,/nas02,/nas"
 }
