Change default AROMARegression Implementation to fsl_regfilt.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -131,7 +131,7 @@
       			"FWHM": 6
 			},
 			"AROMARegression":{
-				"Implementation": "fsl_regfilt_R"
+				"Implementation": "fsl_regfilt"
 			},
 			"Resample":{
 				"ReferenceImage": "SET REFERENCE IMAGE"
