--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -133,6 +133,23 @@
 			"AROMARegression":{
 				"Implementation": "fsl_regfilt"
 			},
+			"ScrubTimepoints":[
+				{
+					"TargetVariable": "framewise_displacement",
+					"Threshold": 0.9,
+					"Action": "remove",
+					"ScrubAhead": 0,
+					"ScrubBehind": 0,
+					"ScrubContiguous": 0
+				},
+				{
+					"DropCSV": "EXAMPLE_DROP_FILE.csv",
+					"Action": "remove",
+					"ScrubAhead": 0,
+					"ScrubBehind": 0,
+					"ScrubContiguous": 0
+				}
+			],
 			"Resample":{
 				"ReferenceImage": "SET REFERENCE IMAGE"
 			},
