--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -134,13 +134,12 @@
 				"Implementation": "fsl_regfilt"
 			},
 			"ScrubTimepoints":{
-					"TargetVariable": "framewise_displacement",
-					"DropCSV": "",
-					"Threshold": 0.9,
-					"Action": "remove",
-					"ScrubAhead": 0,
-					"ScrubBehind": 0,
-					"ScrubContiguous": 0
+				"TargetVariables": "framewise_displacement",
+				"Threshold": 0.9,
+				"ScrubAhead": 0,
+				"ScrubBehind": 0,
+				"ScrubContiguous": 0,
+				"InsertNA": true
 			},
 			"Resample":{
 				"ReferenceImage": "SET REFERENCE IMAGE"
