Add 'overlap_ok' to configuration.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -166,6 +166,7 @@
 		"Atlases": ["power"],
 		"RequireMask": true,
 		"PropVoxels": 0.5,
+		"OverlapOk": false,
         "MemoryUsage":"20G",
         "TimeUsage": "2:0:0",
         "NThreads": "1",
