Restoring the config file (again) :/

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -52,89 +52,6 @@
         "DockerFMRIPrepVersion": ""
     },
     "PostProcessingOptions": {
-        "TargetDirectory": "",
-        "TargetSuffix": "space-MNI152NLin2009cAsym_desc-preproc_bold.nii.gz",
-        "OutputDirectory": "",
-        "OutputSuffix": "",
-        "ConfoundSuffix": "desc-confounds_timeseries.tsv",
-        "DropCSV": "",
-        "Regress": true,
-        "Confounds": [
-            "trans_x",
-            "trans_y",
-            "trans_z",
-            "rot_x",
-            "rot_y",
-            "rot_z",
-            "csf",
-            "white_matter",
-            "global_signal",
-            "a_comp_cor.*"
-        ],
-        "ConfoundsQuad": [
-            "trans_x",
-            "trans_y",
-            "trans_z",
-            "rot_x",
-            "rot_y",
-            "rot_z",
-            "csf",
-            "white_matter",
-            "global_signal"
-        ],
-        "ConfoundsDerive": [
-            "trans_x",
-            "trans_y",
-            "trans_z",
-            "rot_x",
-            "rot_y",
-            "rot_z",
-            "csf",
-            "white_matter",
-            "global_signal"
-        ],
-        "ConfoundsQuadDerive": [
-            "trans_x",
-            "trans_y",
-            "trans_z",
-            "rot_x",
-            "rot_y",
-            "rot_z",
-            "csf",
-            "white_matter",
-            "global_signal"
-        ],
-        "FilteringHighPass": 0.008,
-        "FilteringLowPass": -1,
-        "FilteringOrder": 2,
-        "OversamplingFreq": 4,
-        "PercentFreqSample": 1,
-        "Scrubbing": true,
-        "ScrubVar": "framewise_displacement",
-        "ScrubFDThreshold": 0.3,
-        "ScrubAhead": 1,
-        "ScrubBehind": 1,
-        "ScrubContig": 2,
-        "RespNotchFilter": true,
-        "MotionVars": [
-            "trans_x",
-            "trans_y",
-            "trans_z",
-            "rot_x",
-            "rot_y",
-            "rot_z"
-        ],
-        "RespNotchFilterBand": [
-            0.31,
-            0.43
-        ],
-        "PostProcessingMemoryUsage": "20000",
-        "PostProcessingTimeUsage": "8:0:0",
-        "NThreads": "1",
-        "SpectralInterpolationBinSize": 5000,
-        "LogDirectory": ""
-    },
-    "PostProcessingOptions2": {
         "WorkingDirectory": "",
         "WriteProcessGraph": true,
         "TargetDirectory": "",
@@ -217,43 +134,6 @@
             "NThreads": "1"
         }
     },
-    "BetaSeriesOptions": {
-        "TargetDirectory": "",
-        "TargetSuffix": "preproc_bold.nii.gz",
-        "OutputDirectory": "",
-        "OutputSuffix": "betaseries.nii.gz",
-        "ConfoundSuffix": "desc-confounds_regressors.tsv",
-        "Regress": true,
-        "NuisanceRegression": "QuadLagged",
-        "WhiteMatter": true,
-        "CSF": true,
-        "GlobalSignalRegression": true,
-        "FilteringHighPass": 0.008,
-        "FilteringLowPass": -1,
-        "FilteringOrder": 2,
-        "TaskSpecificOptions": [
-            {
-                "Task": "",
-                "ExcludeColumnInfo": "trial_type",
-                "ExcludeTrialTypes": [
-                    "block"
-                ]
-            }
-        ],
-        "LogDirectory": ""
-    },
-    "SUSANOptions": {
-        "TargetDirectory": "",
-        "TargetSuffix": "preproc_bold.nii.gz",
-        "OutputDirectory": "",
-        "OutputSuffix": "preproc_susan.nii.gz",
-        "BrightnessThreshold": 500,
-        "FWHM": 0,
-        "MemoryUsage": "5000",
-        "TimeUsage": "2:0:0",
-        "NThreads": "4",
-        "LogDirectory": ""
-    },
     "ProcessingStreams": [
         {
             "ProcessingStream": "smooth_aroma-regress_filter_normalize",
@@ -301,7 +181,8 @@
         ],
         "RequireMask": true,
         "PropVoxels": 0.5,
-        "MemoryUsage": "20000",
+        "OverlapOk": false,
+        "MemoryUsage": "20G",
         "TimeUsage": "2:0:0",
         "NThreads": "1",
         "LogDirectory": ""
