Include wildcard as one of the default scrub timepoint examples.

--- a/clpipe/data/defaultConfig.json
+++ b/clpipe/data/defaultConfig.json
@@ -86,7 +86,7 @@
                 "InsertNA": true,
                 "Columns": [
                     {
-                        "TargetVariable": "cosine01",
+                        "TargetVariable": "cosine*",
                         "Threshold": 100,
                         "ScrubAhead": 0,
                         "ScrubBehind": 0,
