Switch to installing full package because docs need to reference clpipe. Revert requirements move to docs.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,13 @@ build
 pytest
 wheel
 
-# Install the Documentation Dependencies
--r docs/requirements.txt
+# Documentation Dependencies
+markdown-it-py==2.0.1 
+myst-parser==0.16.1 
+sphinx==4.5.0
+sphinx-jsonschema==1.17.2
+sphinx-click==4.3.0
 
-# Install this package in edit mode
+# Install clpipe in edit mode
 -e .
 
