--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ myst-parser==0.16.1
 sphinx==4.5.0
 sphinx-jsonschema==1.17.2
 sphinx-click==4.3.0
+sphinx_rtd_theme==1.2.0
 
 # Install clpipe in edit mode
 -e .
