Update nthread and email to use default

--- a/clpipe/batchConfigs/slurmUNCConfigSnakeCase.json
+++ b/clpipe/batchConfigs/slurmUNCConfigSnakeCase.json
@@ -8,7 +8,7 @@
     ],
     "sub_options_equal": [],
     "n_threads_command": "--cpus-per-task={nthreads}",
-    "n_threads": "1",
+    "n_threads_default": "1",
     "memory_command": "--mem={mem}",
     "memory_default": "1000",
     "time_command": "--time={time}",
@@ -16,7 +16,7 @@
     "job_id_command": "--job-name=\"{jobid}\"",
     "output_command": "--output={output}",
     "command_wrapper": "--wrap=\"{cmdwrap}\"",
-    "email_address": "",
+    "email_address_default": "",
     "email_command": "--mail-user {email} --mail-type=FAIL",
     "fmri_prep_batch_commands": "-e --no-home",
     "no_quotes": false,
