Refactor GLM to use the new job manager factory
GLM no longer uses the BatchConfig inside the BatchConfigOptions to
set up the config file. Instead it uses the ProjectOptions to load
in the batchconfigs

--- a/clpipe/data/defaultGLMConfig.json
+++ b/clpipe/data/defaultGLMConfig.json
@@ -37,8 +37,7 @@
 				"MemoryUsage": "10G",
 				"TimeUsage": "10:0:0",
 				"NThreads": "4",
-				"Email": "",
-				"BatchConfig": "slurmUNCConfig.json"
+				"Email": ""
 			}
     }
   ],
@@ -54,8 +53,7 @@
         "MemoryUsage": "5G",
         "TimeUsage": "5:0:0",
         "NThreads": "4",
-        "Email": "",
-        "BatchConfig": "slurmUNCConfig.json"
+        "Email": ""
       }
     }
   ]
